--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,23 @@
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Quoting Dojo</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-	<script type="text/javascript"></script>
+	<script type="text/javascript">
+	$(document).ready(function(){
+		alert("Hi")
+
+	})
+	</script>
 </head>
 <body>
 	<h1>Hi</h1>
+	<h3>Add a Quote!</h3>
+	<form action='/quotes' method='post'>
+	Your Name: <input type='text' name='name'>
+	Your Quote: <input type='text' name='quote'>
+	<input type='submit' value='Submit'>
+	 </form>
 </body>
 </html>
