--- a/static/style.css
+++ b/static/style.css
@@ -5,3 +5,38 @@
 h1 {
 	color: blue;
 }
+
+p {
+	display: inline-block;
+	width: 125px;
+	vertical-align: top;
+	margin-top: 0px;
+}
+
+form {
+
+	padding: 25px;
+}
+form input {
+	width: 200px;
+}
+
+
+a {
+	font-size: 16px;
+	background-color: gray;
+	text-decoration: none;
+	border: 1px solid black;
+	color: white;
+	padding: 3px 25px;
+
+}
+
+.submitting {
+	font-size: 16px;
+	background-color: gray;
+	text-decoration: none;
+	border: 1px solid black;
+	color: white;
+	margin-right: 250px;
+}
